국내, 외국도서 리스트페이지 페이지네이션 및 검색, 검색결과 구현완료

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -55,13 +55,13 @@
                 <span class="ml-[2px] hidden lg:block">U_LUV</span>
             </a>
             <div class="xl:flex gap-3 ml-[50px] font-bold">
-                <a th:href="@{/product/domestic/list}" class="inline-flex hover:text-red-500 flex-shrink-0">
+                <a th:href="@{|/product/list?type=book|}" class="inline-flex hover:text-red-500 flex-shrink-0">
                     <span class="ml-[2px] hidden lg:block ">
                         국내도서
                     </span>
                 </a>
 
-                <a th:href="@{/product/foreign/list}" class="inline-flex hover:text-red-500 flex-shrink-0">
+                <a th:href="@{|/product/list?type=foreign|}" class="inline-flex hover:text-red-500 flex-shrink-0">
                     <span class="ml-[2px] hidden lg:block">
                         외국도서
                     </span>
