--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="">
+    <link href="" rel="stylesheet">
     <title>main</title>
 </head>
 <body layout:fragment="content">
@@ -16,21 +16,24 @@
         <!-- 도서 목록 -->
         <div class="flex flex-wrap justify-center mt-8">
             <!-- 각 도서 -->
-            <div th:each="newBook : ${newBooks}" class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 xl:w-1/5 p-4">
+            <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 xl:w-1/5 p-4" th:each="newBook : ${newBooks}">
                 <div class="text-center">
                     <a th:href="${newBook.link}">
-                        <img class="mx-auto w-48 h-72" th:src="${newBook.coverImg}" alt="Book Cover">
+                        <img alt="Book Cover" class="mx-auto w-48 h-72" th:src="${newBook.coverImg}">
                     </a>
-                    <a th:href="${newBook.link}" class="block text-lg font-semibold my-[30px]"
+                    <a class="block text-lg font-semibold my-[30px]" th:href="${newBook.link}"
                        th:text="${newBook.title}">Title</a>
-                    <span th:text="${newBook.author}" class="block text-gray-600 mb-[20px]"></span>
-                    <span th:text="${newBook.publisher}" class="block text-gray-600 mb-[20px]"></span>
+                    <span class="block text-gray-600 mb-[20px]" th:text="${newBook.author}"></span>
+                    <span class="block text-gray-600 mb-[20px]" th:text="${newBook.publisher}"></span>
                     <div class="mt-2">
-                        <span class="text-gray-500">정가 : </span>
-                        <span class="line-through text-gray-500" th:text="${newBook.priceStandard} + '원'"></span>
-                        <span>/</span>
-                        <span class="text-gray-500">할인가 : </span>
-                        <span th:text="${newBook.priceSales} + '원'" class="text-green-600"></span>
+                        <div>
+                            <span class="text-gray-500">정가 : </span>
+                            <span class="line-through text-gray-500" th:text="${newBook.priceStandard} + '원'"></span>
+                        </div>
+                        <div>
+                            <span class="text-gray-500">할인가 : </span>
+                            <span class="text-green-600" th:text="${newBook.priceSales} + '원'"></span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -44,21 +47,24 @@
         <!-- 도서 목록 -->
         <div class="flex flex-wrap justify-center mt-8">
             <!-- 각 도서 -->
-            <div th:each="bestseller : ${bestsellers}" class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 xl:w-1/5 p-4">
+            <div class="w-full sm:w-1/2 md:w-1/4 lg:w-1/4 xl:w-1/5 p-4" th:each="bestseller : ${bestsellers}">
                 <div class="text-center">
                     <a th:href="${bestseller.link}">
-                        <img class="mx-auto w-48 h-72" th:src="${bestseller.coverImg}" alt="Book Cover">
+                        <img alt="Book Cover" class="mx-auto w-48 h-72" th:src="${bestseller.coverImg}">
                     </a>
-                    <a th:href="${bestseller.link}" class="block text-lg font-semibold my-[30px]"
+                    <a class="block text-lg font-semibold my-[30px]" th:href="${bestseller.link}"
                        th:text="${bestseller.title}">Title</a>
-                    <span th:text="${bestseller.author}" class="block text-gray-600 mb-[20px]"></span>
-                    <span th:text="${bestseller.publisher}" class="block text-gray-600 mb-[20px]"></span>
+                    <span class="block text-gray-600 mb-[20px]" th:text="${bestseller.author}"></span>
+                    <span class="block text-gray-600 mb-[20px]" th:text="${bestseller.publisher}"></span>
                     <div class="mt-2">
-                        <span class="text-gray-500">정가 : </span>
-                        <span th:text="${bestseller.priceStandard} + '원'" class="line-through text-gray-500"></span>
-                        <span>/</span>
-                        <span class="text-gray-500">할인가 : </span>
-                        <span th:text="${bestseller.priceSales}  + '원'" class="text-green-600"></span>
+                        <div>
+                            <span class="text-gray-500">정가 : </span>
+                            <span class="line-through text-gray-500" th:text="${bestseller.priceStandard} + '원'"></span>
+                        </div>
+                        <div>
+                            <span class="text-gray-500">할인가 : </span>
+                            <span class="text-green-600" th:text="${bestseller.priceSales}  + '원'"></span>
+                        </div>
                     </div>
                 </div>
             </div>
