--- a/src/main/resources/templates/product/domestic_list.html
+++ b/src/main/resources/templates/product/domestic_list.html
@@ -18,11 +18,11 @@
 </div>
 
 <!-- 국내 도서 목록 -->
-<div class="flex justify-center items-center" th:if="${domestic}">
+<div class="flex justify-center items-center" th:if="${products}">
     <div class="my-10">
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 xl:grid-cols-5 gap-6 mt-8">
             <!-- 도서 정보 표시 -->
-            <div class="flex flex-col mx-auto w-80 p-4" th:each="product : ${domestic}">
+            <div class="flex flex-col mx-auto w-80 p-4" th:each="product : ${products}">
                 <div class="text-center">
                     <a class="block text-lg font-semibold my-4" th:href="@{|/product/domestic/detail/${product.id}|}">
                         <img alt="Book Cover" class="mx-auto w-48 h-72" th:src="${product.coverImg}">
@@ -42,22 +42,22 @@
 </div>
 
 <!-- 페이지네이션 -->
-<div th:if="${!domestic.isEmpty()}">
+<div th:if="${!products.isEmpty()}">
     <div class="flex justify-center mt-4">
         <ul class="flex list-reset border border-gray-300 rounded">
-            <li class="page-item px-3 py-2 bg-gray-100 hover:bg-gray-200" th:classappend="${!domestic.hasPrevious()} ? 'disabled'">
-                <a class="page-link block text-center" href="javascript:void(0)" th:data-page="${domestic.number}">
+            <li class="page-item px-3 py-2 bg-gray-100 hover:bg-gray-200" th:classappend="${!products.hasPrevious()} ? 'disabled'">
+                <a class="page-link block text-center" href="javascript:void(0)" th:data-page="${products.number}">
                     <span>이전</span>
                 </a>
             </li>
             <li class="page-item px-3 py-2 hover:bg-gray-200"
-                th:classappend="${page == domestic.number+1} ? 'active'"
-                th:each="page: ${#numbers.sequence(1, domestic.totalPages)}"
-                th:if="${page >= domestic.number-5 and page <= domestic.number+5}">
+                th:classappend="${page == products.number+1} ? 'active'"
+                th:each="page: ${#numbers.sequence(1, products.totalPages)}"
+                th:if="${page >= products.number-5 and page <= products.number+5}">
                 <a class="page-link block text-center" href="javascript:void(0)" th:data-page="${page}" th:text="${page}"></a>
             </li>
-            <li class="page-item px-3 py-2 hover:bg-gray-200" th:classappend="${!domestic.hasNext()} ? 'disabled'">
-                <a class="page-link block text-center" href="javascript:void(0)" th:data-page="${domestic.number+2}">
+            <li class="page-item px-3 py-2 hover:bg-gray-200" th:classappend="${!products.hasNext()} ? 'disabled'">
+                <a class="page-link block text-center" href="javascript:void(0)" th:data-page="${products.number+2}">
                     <span>다음</span>
                 </a>
             </li>
@@ -66,7 +66,7 @@
 </div>
 <form id="searchForm" method="get" th:action="@{/product/domestic/list}">
     <input id="kw" name="kw" th:value="${kw}" type="hidden">
-    <input id="page" name="page" th:value="${domestic.number}" type="hidden">
+    <input id="page" name="page" th:value="${products.number}" type="hidden">
 </form>
 
 <script layout:fragment="script" type="text/javascript">
