--- a/src/main/resources/templates/error_page.html
+++ b/src/main/resources/templates/error_page.html
@@ -6,6 +6,7 @@
 <main layout:fragment="content">
   <section class="section section-post-list flex-grow flex items-center justify-center">
     <div class="text-center">
+      <h1 class="text-4xl font-bold mb-4">⚠️</h1>
       <h1 class="text-4xl font-bold mb-4">잘못된 접근입니다.</h1>
 <!--      <p class="text-gray-600 mb-8">(에러 메시지를 여기에 표시)</p>-->
       <a href="javascript:history.back()"
