--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -20,6 +20,55 @@
     <!-- 테일윈드 -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <style>
+        /* 휴대폰 화면 크기에 따라 스타일 조정 */
+        @media (max-width: 767px) {
+            /* 네비게이션 바 스타일 변경 */
+            .container {
+                padding: 0 10px;
+            }
+            .logo {
+                margin-right: auto;
+            }
+            .xl\:flex {
+                display: none;
+            }
+            .hidden {
+                display: inline-block !important;
+            }
+            .mobile-menu-button {
+                display: block;
+            }
+            .mobile-menu {
+                display: none;
+                position: absolute;
+                top: 100%;
+                right: 0;
+                width: 100%;
+                background-color: #fff;
+                border: 1px solid #efefef;
+                z-index: 100;
+            }
+            .mobile-menu ul {
+                list-style: none;
+                padding: 0;
+            }
+            .mobile-menu li {
+                padding: 10px;
+                border-bottom: 1px solid #efefef;
+            }
+
+            /* 풋터 스타일 변경 */
+            .md\:flex {
+                flex-direction: column;
+                gap: 20px;
+            }
+            .mx-[10px] {
+                margin: 0 auto;
+            }
+        }
+    </style>
+
     <script>
         // 페이지 로딩 시 실행
         window.onload = function() {
@@ -36,13 +85,9 @@
         };
     </script>
 </head>
-
 <body class="min-h-screen flex flex-col pt-[35px] md:pt-[50px]">
 
-<!-- 데이지 UI -->
 <link href="https://cdn.jsdelivr.net/npm/daisyui@3.1.1/dist/full.css" rel="stylesheet" type="text/css"/>
-
-<!-- common.css -->
 <link href="/resource/common/common.css" rel="stylesheet" type="text/css"/>
 
 <header class="fixed z-40 top-0 left-0 w-full bg-white border-b-[1px] border-b-[color:#efefef] h-[35px] md:h-[50px]">
@@ -52,14 +97,17 @@
                 <span class="text-[#1E9EFE]">BOOK</span>
                 <span class="ml-[2px] hidden lg:block">U_LUV</span>
             </a>
+            <button class="mobile-menu-button xl:hidden">
+                <i class="fas fa-bars"></i>
+            </button>
             <div class="xl:flex gap-3 ml-[50px] font-bold">
-                <a href="#" class="inline-flex hover:text-red-500 flex-shrink-0">
+                <a th:href="@{|/product/list?type=book|}" class="inline-flex hover:text-red-500 flex-shrink-0">
                     <span class="ml-[2px] hidden lg:block ">
                         국내도서
                     </span>
                 </a>
 
-                <a href="#" class="inline-flex hover:text-red-500 flex-shrink-0">
+                <a th:href="@{|/product/list?type=foreign|}" class="inline-flex hover:text-red-500 flex-shrink-0">
                     <span class="ml-[2px] hidden lg:block">
                         외국도서
                     </span>
@@ -67,11 +115,10 @@
 
                 <a href="#" class="inline-flex hover:text-red-500 flex-shrink-0">
                     <span class="ml-[2px] hidden lg:block">
-                        중고도서
+                        Book U Luv Reader
                     </span>
                 </a>
             </div>
-
         </div>
 
         <div class="search-box items-center space-x-2 mr-4 md:mr-20 hidden xl:flex">
@@ -99,47 +146,102 @@
                 </span>
             </a>
 
-            <a href="/member/logout" class="inline-flex flex-shrink-0" sec:authorize="isAuthenticated()">
-                <i class="fa-solid fa-arrow-right-from-bracket"></i>
-                <span class="ml-[2px]">
-                    로그아웃
-                </span>
-            </a>
-
             <a href="/member/profile" class="inline-flex items-center" sec:authorize="isAuthenticated()">
-                <img class="fa-solid fa-user w-12 h-12 rounded-full" alt="" th:if="${#authentication.principal.imgFilePath}" th:src="${#authentication.principal.imgFilePath}"/>
-                <img class="fa-solid fa-user w-12 h-12 rounded-full" alt="" src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
+                <img class="fa-solid fa-user w-12 h-12 rounded-full" alt=""
+                     th:if="${#authentication.principal.imgFilePath}"
+                     th:src="${#authentication.principal.imgFilePath}"/>
+                <img class="fa-solid fa-user w-12 h-12 rounded-full" alt=""
+                     src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
                      th:unless="${#authentication.principal.imgFilePath}"/>
                 <span class="ml-[2px]">
                 </span>
-                <span class="ml-[2px] hidden lg:block items-center" th:if="${#authentication.principal.nickName}" th:text="${#authentication.principal.nickName + ' 님'}">
+                <span class="ml-[2px] hidden lg:block items-center" th:if="${#authentication.principal.nickName}"
+                      th:text="${#authentication.principal.nickName + ' 님'}">
                 </span>
             </a>
             <a href="/admin/list" class="inline-flex items-center">
                 <span class="ml-[2px] hidden lg:block items-center">
                     관리자페이지
                   </span>
-              </a>
+            </a>
             <a href="/notice/list" class="inline-flex flex-shrink-0">
                 <span class="ml-[2px]">
                     공지사항
                 </span>
             </a>
-            <a href="#" class="inline-flex flex-shrink-0">
-                <span class="ml-[2px]">
-                    메뉴 2
-                </span>
-            </a>
+
             <a href="#" class="inline-flex flex-shrink-0">
                 <span class="ml-[2px]">
                     장바구니
                 </span>
             </a>
+
+            <a href="/member/logout" class="inline-flex flex-shrink-0" sec:authorize="isAuthenticated()">
+                <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                <span class="ml-[2px]">
+                    로그아웃
+                </span>
+            </a>
         </div>
+    </div>
+    <!--반응형 레이아웃 임시 추가 xl:hidden  = 숨겨놓았다가 사이즈가 767px 이하로 줄어들면 나타남-->
+    <div class="mobile-menu xl:hidden">
+        <ul>
+            <li>
+                <a th:href="@{|/product/list?type=book|}" class="block hover:text-red-500">
+                    국내도서
+                </a>
+            </li>
+            <li>
+                <a th:href="@{|/product/list?type=foreign|}" class="block hover:text-red-500">
+                    외국도서
+                </a>
+            </li>
+            <li>
+                <a href="#" class="block hover:text-red-500">
+                    Book U Luv Reader
+                </a>
+            </li>
+            <li>
+                <a href="/member/login" class="block hover:text-red-500" sec:authorize="isAnonymous()">
+                    로그인
+                </a>
+            </li>
+            <li>
+                <a href="/member/join" class="block hover:text-red-500" sec:authorize="isAnonymous()">
+                    회원가입
+                </a>
+            </li>
+            <li>
+                <a href="/member/profile" class="block hover:text-red-500" sec:authorize="isAuthenticated()">
+                    프로필
+                </a>
+            </li>
+            <li>
+                <a href="/admin/list" class="block hover:text-red-500">
+                    관리자페이지
+                </a>
+            </li>
+            <li>
+                <a href="/notice/list" class="block hover:text-red-500">
+                    공지사항
+                </a>
+            </li>
+            <li>
+                <a href="#" class="block hover:text-red-500">
+                    장바구니
+                </a>
+            </li>
+            <li>
+                <a href="/member/logout" class="block hover:text-red-500" sec:authorize="isAuthenticated()">
+                    로그아웃
+                </a>
+            </li>
+        </ul>
     </div>
 </header>
 
-<div class="flex-grow flex flex-col py-5">
+<div class="flex-grow flex flex-col py-32">
     <main layout:fragment="content" class="flex-grow flex flex-col"></main>
 </div>
 
@@ -148,14 +250,18 @@
         <nav class="flex flex-col md:flex-row md:justify-between">
             <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around">
                 <div>
-                    <img class="w-[100px]" src="https://i.imgur.com/9qCFLjc.png"  alt="">
+                    <img class="w-[100px]" src="https://i.imgur.com/9qCFLjc.png" alt="">
                 </div>
-                <div class="ml-[20px]">
+
+                <div class="ml-[20px] text-white">
+
                     <div class="mb-[10px]">
                         <span>고우영</span>
                     </div>
                     <div class="mb-[10px]">
+
                         <span>이메일 : wooyoung0407@naver.com</span>
+
                     </div>
                     <div class="mb-[10px]">
                         <span>Front/React</span>
@@ -165,16 +271,20 @@
                     </div>
                 </div>
             </div>
-            <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around">
+
+            <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around mx-[10px]">
                 <div>
-                    <img class="w-[100px]" src="https://i.imgur.com/EgByDhq.jpg"  alt="">
+                    <img class="w-[100px]" src="https://i.imgur.com/EgByDhq.jpg" alt="">
                 </div>
-                <div class="ml-[20px]">
+                <div class="ml-[20px] text-white">
+
                     <div class="mb-[10px]">
                         <span>박창규</span>
                     </div>
                     <div class="mb-[10px]">
+
                         <span>이메일 : wooyoung0407@naver.com</span>
+
                     </div>
                     <div class="mb-[10px]">
                         <span>박창규</span>
@@ -187,9 +297,11 @@
 
             <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around">
                 <div>
-                    <img class="w-[100px]" src="https://i.imgur.com/Q42WfBv.png"  alt="">
+                    <img class="w-[100px]" src="https://i.imgur.com/Q42WfBv.png" alt="">
                 </div>
-                <div class="ml-[20px]">
+
+                <div class="ml-[20px] text-white">
+
                     <div class="mb-[10px]">
                         <span>황인성</span>
                     </div>
