--- a/src/main/resources/templates/admin/author.html
+++ b/src/main/resources/templates/admin/author.html
@@ -14,6 +14,8 @@
 <body>
 
 <main layout:fragment="content">
+
+
   <header class="w-[1580px] mx-auto p-4 text-left border-b">
     <div class="flex justify-between items-center">
       <h1 class="text-[50px]">관리자 페이지</h1>
@@ -47,27 +49,37 @@
     </div>
     <!-- ... -->
   </header>
+  <!-- 회원 관리 테이블 -->
   <div class="w-[1580px] mx-auto mt-[100px]">
-    <!-- 회원 관리 테이블 -->
-    <h1 class="text-3xl font-semibold mt-8 mb-4">판매글 관리</h1>
+    <h1 class="text-3xl font-semibold my-6">작가 관리</h1>
     <div class="overflow-x-auto">
-      <table class="w-full">
+      <table class="min-w-full">
         <thead>
         <tr>
-          <th class="py-2 px-4 w-auto border">NO.</th>
-          <th class="py-2 px-4 w-auto border">제목</th>
-          <th class="py-2 px-4 w-auto border">작성자</th>
-          <th class="py-2 px-4 w-auto border">작성일자</th>
-          <th class="py-2 px-4 w-auto border">수정일자</th>
+          <th class="py-2 px-4 border">NO.</th>
+          <th class="py-2 px-4 border">ID</th>
+          <th class="py-2 px-4 border">성</th>
+          <th class="py-2 px-4 border">이름</th>
+          <th class="py-2 px-4 border">닉네임</th>
+          <th class="py-2 px-4 border">성별</th>
+          <th class="py-2 px-4 border">생년월일</th>
+          <th class="py-2 px-4 border">전화번호</th>
+          <th class="py-2 px-4 border">활성 여부</th>
+          <th class="py-2 px-4 border">권한부여</th>
         </tr>
         </thead>
         <tbody>
-        <tr th:each="article : ${articleList}">
-          <td class="py-2 px-4 border" th:text="${article.id}">asdasd</td>
-          <td class="py-2 px-4 border" th:text="${article.subject}">asdasd</td>
-          <td class="py-2 px-4 border" th:text="${article.register}">asdasd</td>
-          <td class="py-2 px-4 border" th:text="${article.createDate}">asdasd</td>
-          <td class="py-2 px-4 border" th:text="${article.modifyDate}">asdasd</td>
+        <tr class="bg-white" th:each="member : ${memberList}">
+          <td class="py-2 px-4 border" th:text="${member.id}"></td>
+          <td class="py-2 px-4 border" th:text="${member.userName}"></td>
+          <td class="py-2 px-4 border" th:text="${member.lastName}"></td>
+          <td class="py-2 px-4 border" th:text="${member.firstName}"></td>
+          <td class="py-2 px-4 border" th:text="${member.nickName}"></td>
+          <td class="py-2 px-4 border" th:text="${member.gender}"></td>
+          <td class="py-2 px-4 border" th:text="${member.birthDate}"></td>
+          <td class="py-2 px-4 border" th:text="${member.phone}"></td>
+          <td class="py-2 px-4 border" th:text="${member.isActive}"></td>
+          <td class="py-2 px-4 border" ></td>
         </tr>
         </tbody>
       </table>
