--- a/src/main/resources/templates/order/fail.html
+++ b/src/main/resources/templates/order/fail.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
-<html layout:decorate="~{/layout/layout}">
-<section layout:fragment="content" class="t-flex-1 t-flex t-justify-center t-items-center">
-    <h1 class="t-text-[20px] t-font-bold">실패</h1>
-</section>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+    <title>취소</title>
+</head>
+
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+<div class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden">
+    <div class="modal bg-white p-8 rounded shadow-md max-w-md w-full">
+        <div class="bg-white p-8 rounded shadow-md max-w-md w-full">
+            <h1 class="text-2xl font-semibold mb-4">결제가 취소되었습니다.</h1>
+            <p class="text-gray-600 mb-4">결제 내용 입력이 잘못되었습니다. 다시 시도해주세요.</p>
+        </div>
+        <div class="flex justify-end">
+            <a href="#" class="bg-gray-500 hover:bg-gray-600 text-white py-2 px-4 rounded close-button">닫기</a>
+        </div>
+    </div>
+</div>
+</body>
+
 </html>
