--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -34,8 +34,6 @@
                 }
             }
         };
-
-
     </script>
 </head>
 
@@ -73,7 +71,6 @@
                     </span>
                 </a>
             </div>
-
         </div>
 
         <div class="search-box items-center space-x-2 mr-4 md:mr-20 hidden xl:flex">
@@ -109,7 +106,7 @@
                 </span>
             </a>
 
-            <a href="/member/join" class="inline-flex flex-shrink-0" sec:authorize="isAnonymous()">
+            <a href="/member/join-type" class="inline-flex flex-shrink-0" sec:authorize="isAnonymous()">
                 <span class="ml-[2px]">
                     회원가입
                 </span>
