--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="grid grid-cols-2 mt-2 gap-2">
-                    <a class="btn btn-secondary btn-outline" th:href="@{/member/join}">회원가입</a>
+                    <a class="btn btn-secondary btn-outline" th:href="@{/member/join-type}">회원가입</a>
                     <input class="btn btn-primary btn-outline" type="submit" value="로그인">
                 </div>
 
