--- a/src/main/resources/templates/member/updateProfile.html
+++ b/src/main/resources/templates/member/updateProfile.html
@@ -283,6 +283,7 @@
                       document.getElementById("sample4_roadAddress").readOnly = true;
                       document.getElementById("sample4_jibunAddress").readOnly = true;
                       document.getElementById("sample4_extraAddress").readOnly = true;
+                      document.getElementById("sample4_postcode").readOnly = true;
                       var guideTextBox = document.getElementById("guide");
                       // 사용자가 '선택 안함'을 클릭한 경우, 예상 주소라는 표시를 해준다.
                       if (data.autoRoadAddress) {
