--- a/src/main/resources/templates/order/success.html
+++ b/src/main/resources/templates/order/success.html
@@ -2,5 +2,9 @@
 <html layout:decorate="~{/layout/layout}">
 <section layout:fragment="content" class="t-flex-1 t-flex t-justify-center t-items-center">
     <h1 class="t-text-[20px] t-font-bold">성공</h1>
+    <p th:text="${product.id}"></p>
+    <p th:text="${product.title}"></p>
+    <p th:text="${product.priceSales}"></p>
+    <p th:text="${member.lastName}+${member.firstName}"></p>
 </section>
 </html>
