--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -3,72 +3,79 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="UTF-8">
-  <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-        name="viewport">
-  <meta content="ie=edge" http-equiv="X-UA-Compatible">
-  <title>관리자 페이지</title>
-  <!-- 테일윈드 스타일시트 링크 추가 -->
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <title>관리자 페이지</title>
+    <!-- 테일윈드 스타일시트 링크 추가 -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
 
 <main layout:fragment="content">
-  <header class="p-4 text-left border-b">
-    <div class="flex justify-between items-center">
-      <h1 class="text-2xl">관리자 페이지</h1>
-      <div class="menu">
-        <div class="admin_menu flex space-x-4">
-          <ul class="flex space-x-4">
-            <li>
-              <a th:href="@{/admin/member}" class="menu-link">회원관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/author}" class="menu-link">작가관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/notice}" class="menu-link">공지사항 관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/article}" class="menu-link">판매 글 관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/product}" class="menu-link">도서관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/calculate}" class="menu-link">정산관리</a>
-            </li>
-          </ul>
+    <header class="w-[1580px] mx-auto p-4 text-left border-b">
+        <div class="flex justify-between items-center">
+            <h1 class="text-[50px]">관리자 페이지</h1>
+            <div class="menu">
+                <div class="admin_menu flex space-x-4">
+                    <ul class="flex space-x-4">
+                        <li>
+                            <a th:href="@{/admin/member}" class="menu-link">회원관리</a>
+                        </li>
+                        <li>
+                            <a th:href="@{/admin/author}" class="menu-link">작가관리</a>
+                        </li>
+                        <li>
+                            <a th:href="@{/admin/notice}" class="menu-link">공지사항 관리</a>
+                        </li>
+                        <li>
+                            <a th:href="@{/admin/article}" class="menu-link">판매 글 관리</a>
+                        </li>
+                        <li>
+                            <a th:href="@{/admin/product}" class="menu-link">도서관리</a>
+                        </li>
+                        <li>
+                            <a th:href="@{/admin/calculate}" class="menu-link">정산관리</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
+        <!-- ... -->
+    </header>
+    <!-- 회원 관리 테이블 -->
+    <div class="w-[1580px] mx-auto mt-[100px]">
+        <div class="flex justify-between">
+            <h1 class="text-3xl font-semibold mt-8 mb-4">공지사항 관리</h1>
+            <div class="flex items-center">
+                <a th:href="@{/notice/create}">글쓰기</a>
+                <input class="ml-[20px]" type="button" value="삭제">
+            </div>
+        </div>
+        <div class="overflow-x-auto">
+            <table class="min-w-full">
+                <thead>
+                <tr>
+                    <th class="py-2 px-4 w-auto border">NO.</th>
+                    <th class="py-2 px-4 w-auto border">제목</th>
+                    <th class="py-2 px-4 w-auto border">작성자</th>
+                    <th class="py-2 px-4 w-auto border">작성일자</th>
+                    <th class="py-2 px-4 w-auto border">수정일자</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr class="bg-white" th:each="notice : ${noticeList}">
+                    <td class="py-2 px-4 border" th:text="${notice.id}"></td>
+                    <td class="py-2 px-4 border" th:text="${notice.subject}"></td>
+                    <td class="py-2 px-4 border" th:text="${notice.register}"></td>
+                    <td class="py-2 px-4 border" th:text="${notice.createDate}"></td>
+                    <td class="py-2 px-4 border" th:text="${notice.modifyDate}"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <!-- ... -->
-  </header>
-  <!-- 회원 관리 테이블 -->
-  <h1 class="text-3xl font-semibold mt-8 mb-4">공지사항 관리</h1>
-  <div class="overflow-x-auto">
-    <table class="min-w-full">
-      <thead>
-      <tr>
-        <th class="py-2 px-4 border">NO.</th>
-        <th class="py-2 px-4 border">제목</th>
-        <th class="py-2 px-4 border">작성자</th>
-        <th class="py-2 px-4 border">작성일자</th>
-        <th class="py-2 px-4 border">수정일자</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr class="bg-white" th:each="notice : ${noticeList}">
-        <td class="py-2 px-4 border" th:text="${notice.id}"></td>
-        <td class="py-2 px-4 border" th:text="${notice.subject}"></td>
-        <td class="py-2 px-4 border" th:text="${notice.register}"></td>
-        <td class="py-2 px-4 border" th:text="${notice.createDate}"></td>
-        <td class="py-2 px-4 border" th:text="${notice.modifyDate}"></td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-
 </main>
 </body>
-</html>
+</html>\
