--- a/src/main/resources/templates/member/findPassword.html
+++ b/src/main/resources/templates/member/findPassword.html
@@ -35,7 +35,7 @@
                 </div>
                 <div class="flex justify-center">
                     <button type="button" onclick="sendEmailForPw()" class="btn btn-primary btn-outline">임시 비밀번호 전송</button>
-                    <button type="submit" class="btn btn-primary btn-outline ml-[20px]">뒤로가기</button>
+                    <a href="/member/login" class="btn btn-primary btn-outline ml-[20px]">뒤로가기</a>
                 </div>
             </form>
         </div>
