--- a/src/main/resources/templates/member/findUsername.html
+++ b/src/main/resources/templates/member/findUsername.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="flex justify-center">
                     <button type="submit" class="btn btn-primary btn-outline">아이디찾기</button>
-                    <button type="submit" class="btn btn-primary btn-outline ml-[20px]">뒤로가기</button>
+                    <a href="/member/login" class="btn btn-primary btn-outline ml-[20px]">뒤로가기</a>
                 </div>
             </form>
             <!-- 아이디 찾기 결과 출력 -->
