--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -18,6 +18,7 @@
                     <div class="text-start">
                         <h1 class="text-[50px] mb-4">공지사항</h1>
                     </div>
+                    <a th:href="@{/notice/create}">글쓰기</a>
                     <table class="w-full border-collapse">
                         <thead>
                         <tr class="border-y">
