--- a/src/main/resources/templates/order/success.html
+++ b/src/main/resources/templates/order/success.html
@@ -14,8 +14,8 @@
         <div class="bg-white p-8 rounded shadow-md max-w-md w-full">
             <h1 class="text-2xl font-semibold mb-4">결제가 성공적으로 완료되었습니다!</h1>
             <p th:text="${product.id}">상품아이디</p>
-            <p th:text="${product.productTitle}">상품제목</p>
-            <p th:text="${product.price}">상품가격</p>
+            <p th:text="${product.title}">상품제목</p>
+            <p th:text="${product.priceSales}">상품가격</p>
             <p th:text="${member.lastName} + ${member.firstName}">회원이름</p>
             <p class="text-gray-600 my-4">감사합니다! 궁금한 점이나 문의 사항이 있으시면 언제든지 문의해주세요.</p>
             <a href="#" class="text-blue-500 hover:underline close-button">고객 지원에 문의하기</a>
