유저 권한별 페이지 및 기능 접근 제어(소셜계정 가능)

--- a/src/main/resources/templates/admin/member.html
+++ b/src/main/resources/templates/admin/member.html
@@ -94,8 +94,9 @@
                             <input name="memberId" th:value="${member.id}" type="hidden"/>
                             <select name="newRole">
                                 <option th:selected="${member.role == 'MEMBER'}" value="MEMBER">Member</option>
-                                <option th:selected="${member.role == 'ADMIN'}" value="ADMIN">Admin</option>
                                 <option th:selected="${member.role == 'AUTHOR'}" value="AUTHOR">Author</option>
+                                <option th:selected="${member.role == 'ADMIN'}" value="ADMIN">Admin</option>
+                                <option th:selected="${member.role == 'SUPERADMIN'}" value="SUPERADMIN">SuperAdmin</option>
                                 <!-- 다른 권한 옵션들 추가 -->
                             </select>
                             <button type="submit">변경</button>
